Quick and dirty implementation of new permissions & flags